11/11/10 move rendering of battery terminal shapes into BatteryNode
11/11/10 restore spacing between dielectric charges
# 0.00.39 (45953) Nov 11, 2010
11/11/10 dev version for discussion about dielectric charge spacing
11/11/10 temporarily double max spacing between dielectric charges to demo that this does not fix scale problem
11/10/10 put voltmeter in front of E-Field detector, since voltmeter is smaller
11/10/10 move circuit up a little so bottom wire doesn't get clipped when window is maximized
# 0.00.38 (45903) Nov 9, 2010
11/9/10 dev version to demo progress on voltage measurement
11/9/10 new 3D probes with parallel projection from Noah P (images and assets)
11/9/10 get wire segment endpoints from battery and capacitor model elements, not constants
11/9/10 fix wire shape algorithm, it wouldn't handle the types of wires in Multiple Capacitor circuits
11/9/10 add shape of battery terminals to model (with SR)
11/9/10 add shape of wires to model, associate voltage with a wire (with SR)
11/8/10 use Double.NaN for unknown voltage, display "?" in voltmeter, document in model
11/8/10 remove superfluous "show sign" feature in voltmeter
11/8/10 i18n of "?" for voltmeter display
11/8/10 add close button to voltmeter, similar to bar meters
11/8/10 fix close button on E-Field Detector
# 0.00.37 (45831) Nov 8, 2010
11/8/10 demo 3D probe with parallel projection
11/8/10 new 3D voltmeter black probe with parallel projection, from Noah P.
11/8/10 check in Sketchup files for 3D probes, created by Noah P.
11/8/10 another black voltmeter probe image from Noah P, previous one was slightly rotated
# 0.00.36 (45825) Nov 8, 2010
11/8/10 dev version to demo new 3D probes
11/8/10 new 3D voltmeter probes from Noah P, with outlined tips
11/8/10 fixed #2570, Vector2DNode bugs causing layout problems in E-field Detector for zero-magnitude vectors
11/8/10 new 3D E-field detector probe from Noah P, crosshairs properly centered
11/8/10 new 3D probes from Noah P.